--- a/Capitu.MVC/Capitu.MVC.csproj
+++ b/Capitu.MVC/Capitu.MVC.csproj
@@ -169,6 +169,13 @@
     <Content Include="App_Data\CapituDB.sdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\css\bootstrap-theme.css" />
+    <Content Include="Content\css\bootstrap-theme.min.css" />
+    <Content Include="Content\css\bootstrap.css" />
+    <Content Include="Content\css\bootstrap.min.css" />
+    <Content Include="Content\css\owl.carousel.css" />
+    <Content Include="Content\css\owl.theme.css" />
+    <Content Include="Content\css\style.css" />
     <Content Include="Content\images\ajax-loader.gif" />
     <Content Include="Content\images\icons-18-black.png" />
     <Content Include="Content\images\icons-18-white.png" />
@@ -237,6 +244,15 @@
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Images\apple-touch-icon-114-precomposed.png" />
+    <Content Include="Images\apple-touch-icon-144-precomposed.png" />
+    <Content Include="Images\apple-touch-icon-57-precomposed.png" />
+    <Content Include="Images\apple-touch-icon-72-precomposed.png" />
+    <Content Include="Images\favicon.png" />
+    <Content Include="Images\favicon_b.png" />
+    <Content Include="Images\glyphicons-halflings-white.png" />
+    <Content Include="Images\glyphicons-halflings.png" />
+    <Content Include="Images\perfil\Thumbs.db" />
     <None Include="Properties\PublishProfiles\Gustavo.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Images\logoCapitu.png" />
@@ -252,6 +268,12 @@
     <Content Include="Images\modelo7.jpg" />
     <Content Include="Images\modelo8.jpg" />
     <Content Include="Images\modelo9.jpg" />
+    <Content Include="Images\perfil\fullimage1 - Copia.jpg" />
+    <Content Include="Images\perfil\fullimage1.jpg" />
+    <Content Include="Images\perfil\fullimage2 - Copia.jpg" />
+    <Content Include="Images\perfil\fullimage2.jpg" />
+    <Content Include="Images\perfil\fullimage3 - Copia.jpg" />
+    <Content Include="Images\perfil\fullimage3.jpg" />
     <Content Include="Scripts\Index.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
@@ -264,6 +286,14 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\js\bootstrap.min.js" />
+    <Content Include="Scripts\js\html5shiv.js" />
+    <Content Include="Scripts\js\jquery-1.9.1.min.js" />
+    <Content Include="Scripts\js\jquery.min.js" />
+    <Content Include="Scripts\js\less-1.3.3.min.js" />
+    <Content Include="Scripts\js\owl.carousel.js" />
+    <Content Include="Scripts\js\owl.carousel.min.js" />
+    <Content Include="Scripts\js\scripts.js" />
     <Content Include="Scripts\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
@@ -300,6 +330,7 @@
     <Content Include="Views\Fornecedor\Delete.cshtml" />
     <Content Include="Views\Contato\Index.cshtml" />
     <Content Include="Views\Fornecedor\Perfil.cshtml" />
+    <Content Include="Views\Fornecedor\View1.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
