--- a/Capitu.BE/Capitu.BE.csproj
+++ b/Capitu.BE/Capitu.BE.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContatoBE.cs" />
+    <Compile Include="EtniaBE.cs" />
     <Compile Include="FornecedorBE.cs" />
     <Compile Include="ImagemBE.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
