--- a/Capitu.MVC/Web.config
+++ b/Capitu.MVC/Web.config
@@ -10,9 +10,14 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Capitu.MVC-20141029143415;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Capitu.MVC-20141029143415.mdf" />
-    <add name="CapituEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;data source=|DataDirectory|\CapituDB.sdf&quot;" providerName="System.Data.EntityClient" />            
-    <add name="ACapituDBEntities" connectionString="metadata=res://*/ACapituModel.csdl|res://*/ACapituModel.ssdl|res://*/ACapituModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=189.1.163.194\MSSQLSERVER2012;initial catalog=gpnetcon_hot_acapitu;persist security info=True;user id=usrCapitu;password=s_q87fL6;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="CapituDBEntities" connectionString="metadata=res://*/CapituModel.csdl|res://*/CapituModel.ssdl|res://*/CapituModel.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;data source=|DataDirectory|\CapituDB.sdf&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="CapituEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;data source=|DataDirectory|\CapituDB.sdf&quot;" providerName="System.Data.EntityClient" />            
+    <add name="ACapituDBEntities" connectionString="metadata=res://*/ACapituModel.csdl|res://*/ACapituModel.ssdl|res://*/ACapituModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=189.1.163.194\MSSQLSERVER2012;initial catalog=gpnetcon_hot_acapitu;persist security info=True;user id=usrCapitu;password=s_q87fL6;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="CapituDBEntities" connectionString="metadata=res://*/CapituModel.csdl|res://*/CapituModel.ssdl|res://*/CapituModel.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;data source=|DataDirectory|\CapituDB.sdf&quot;" providerName="System.Data.EntityClient" />-->
+    
+    <!--<add name="CAPITUDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=189.1.163.194\MSSQLSERVER2012;initial catalog=gpnetcon_hot_acapitu;persist security info=True;user id=usrCapitu;password=s_q87fL6;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->    
+    <add name="CAPITUDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=189.1.163.194;initial catalog=gpnetcon_capitu;persist security info=True;user id=usrCapitu2014;password=Rm9s7@8u;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="CAPITUDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NOTE-LAIDE\SQLEXPRESS;initial catalog=CAPITUDB;integrated security=True;pooling=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -24,6 +29,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <customErrors mode="Off" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
