--- a/Capitu.Service/Web.config
+++ b/Capitu.Service/Web.config
@@ -3,8 +3,10 @@
 
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Capitu.MVC-20141029143415;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Capitu.MVC-20141029143415.mdf" />
+    
     <!--<add name="CAPITUDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=189.1.163.194;initial catalog=gpnetcon_capitu;persist security info=True;user id=usrCapitu2014;password=Rm9s7@8u;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="CAPITUDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NOTE-LAIDE\SQLEXPRESS;initial catalog=CAPITUDB;integrated security=True;pooling=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="CAPITUDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NOTE-LAIDE\SQLEXPRESS;initial catalog=CAPITUDB;integrated security=True;pooling=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->  
+        <add name="CAPITUDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:txiyblpsk6.database.windows.net,1433;initial catalog=gpnetcon_capitu;persist security info=True;user id=usrCapitu@txiyblpsk6;password=C@pitu01;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />  
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
