--- a/Capitu.Service/Web.config
+++ b/Capitu.Service/Web.config
@@ -13,14 +13,22 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5"/>
+    <httpRuntime targetFramework="4.5"/>    
+    <caching>
+      <outputCacheSettings>
+        <outputCacheProfiles>
+          <add name="CacheFor10Seconds" duration="10" varyByParam="none" />
+        </outputCacheProfiles>
+      </outputCacheSettings>
+    </caching>
   </system.web>
   <system.serviceModel>
-    <services>
-      <service name="Capitu.Service.Service1">
-        <endpoint address="" binding="webHttpBinding" contract="Capitu.Service.IService1" behaviorConfiguration="web"  />
-      </service>
-    </services>
+    <bindings>
+      <webHttpBinding>
+        <binding name="webHttpBindingWithJsonP"
+                 crossDomainScriptAccessEnabled="true" />
+      </webHttpBinding>
+    </bindings>
     <behaviors>
       <serviceBehaviors>
         <behavior>
@@ -31,11 +39,22 @@
         </behavior>
       </serviceBehaviors>
       <endpointBehaviors>
-        <behavior name="web">
-          <webHttp/>
+        <behavior name="webHttpBehavior">
+          <webHttp helpEnabled="true"/>
         </behavior>
       </endpointBehaviors>
     </behaviors>
+    <services>
+      <service name="Capitu.Service.Service1">
+        <endpoint address="" binding="webHttpBinding" contract="Capitu.Service.IService1" behaviorConfiguration="webHttpBehavior"  />
+      </service>            
+      <service name="Capitu.Service.Fornecedor">
+        <endpoint address="" behaviorConfiguration="webHttpBehavior"
+            binding="webHttpBinding"
+                  bindingConfiguration="webHttpBindingWithJsonP"
+            contract="Capitu.Service.IFornecedor" />
+      </service>      
+    </services>    
     <protocolMapping>
         <add binding="basicHttpsBinding" scheme="https" />
     </protocolMapping>    
